#
# Copyright 2023 CARIAD SE.
# 
# This Source Code Form is subject to the terms of the Mozilla
# Public License, v. 2.0. If a copy of the MPL was not distributed
# with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
# 
#
add_subdirectory(tester_discover_system_participants)
add_subdirectory(tester_health_service_helpers)
add_subdirectory(tester_logging_sink_csv)
add_subdirectory(tester_participant_state_machine)
add_subdirectory(tester_state_transition_helper)
add_subdirectory(tester_system_participant_logger)
add_subdirectory(tester_service_bus_helper)